changed variable model to display selected variables

--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -37,12 +37,12 @@
                     </li>
                     <li class="item">
                         <!--TODO: get bar chart-->
-                        <img class="img-fluid" src="{% static 'img/scatter-plot.png' %}">
+                        <img class="img-fluid" src="{% static 'img/histogram.png' %}">
                         <p>Scatter Plot</p>
                     </li>
                     <li class="item">
                         <!--TODO: get bar chart-->
-                        <img class="img-fluid" src="{% static 'img/violin-plot.png' %}">
+                        <img class="img-fluid" src="{% static 'img/histogram.png' %}">
                         <p>Violin Plot</p>
                     </li>
                 </div>
