--- a/templates/variables/variable_edit.html
+++ b/templates/variables/variable_edit.html
@@ -26,6 +26,7 @@
             <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
             <li><a href="{% url 'variables' %}">Saved Variable Favorites</a></li>
         {% endif %}
+    </ol>
     {% csrf_token %}
     {% if workbook %}
         {# USECASE 1: ADD VAR LIST TO EXISTING WORKBOOK #}
@@ -37,18 +38,20 @@
     {% else  %}
         {% if existing_variable_list %}
             {# USECASE 3: EDIT EXISTING VAR LIST #}
-            <h1 class="page-header pull-left">Edit Variable Favorite</h1>
-            <menu class="page-action-group pull-right">
-                <menuitem class="btn btn-primary">Save Changes</menuitem>
-                <menuitem class="btn btn-link">Cancel</menuitem>
-            </menu>
+            <div class="clearfix">
+                <h1 class="page-header pull-left">Edit Variable Favorite</h1>
+                <ul class="page-action-group pull-right">
+                    <li role="menuitem"><button class="btn btn-primary" id="edit_favorite_list" >Save Changes</button></li>
+                    <li role="menuitem"><a class="btn btn-link" href="{% url 'variable_fav_detail' existing_variable_list.id %}">Cancel</a></li>
+                </ul>
+            </div>
         {% elif newWorkbook %}
             {# USECASE 2: CREATE VAR LIST THEN CREATE WORKBOOK WITH VAR LIST #}
-            <h1 class="page-header pull-left">Create Variable Favorite</h1>
-            <menu class="page-action-group pull-right">
-                <menuitem class="btn btn-primary" data-toggle="modal" data-target="#create-cohort-modal">Save As Favorite</menuitem>
-                <menuitem class="btn btn-link" data-toggle="modal" data-target="#create-cohort-modal">Cancel</menuitem>
-            </menu>
+            <h1 class="page-header">Data Source | Variables</h1>
+            <ul class="page-action-group">
+                <li role="menuitem"><a class="btn btn-primary" data-toggle="modal" data-target="#create-cohort-modal">New Workbook</a></li>
+                <li role="menuitem"><a class="btn btn-link" href="{% url 'variables' %}">Cancel</a></li>
+            </ul>
         {% else %}
             {# USECASE 4: CREATE VAR FAVORITE #}
             <h1 class="page-header pull-left">Create Variable Favorite</h1>
@@ -71,11 +74,11 @@
                     <label for="variable-name" class="panel-title">Name of Favorite (Required)</label>
                 </div>
                 <div class="panel-body">
-                    <input type="text" id="variable_list_name_input" placeholder="my new favorite variable list" class="form-control" value={{ existing_variable_list.name }} required>
-                    <div class="page-action-group">
-                        <button id="edit_favorite_list" class="btn btn-primary">Save Changes</button>
-                        <a href="{% url 'variables' %}" class="btn btn-link">Cancel</a>
-                    </div>
+                    <input type="text" id="variable_list_name_input" placeholder="My new favorite variable" class="form-control" value={{ existing_variable_list.name }} required>
+                    <!--<div class="page-action-group">-->
+                        <!--<button id="edit_favorite_list" class="btn btn-primary">Save Changes</button>-->
+                        <!--<a href="{% url 'variables' %}" class="btn btn-link">Cancel</a>-->
+                    <!--</div>-->
                 </div>
             {% elif newWorkbook %}
                 {# USECASE 2: CREATE VAR LIST THEN CREATE WORKBOOK WITH VAR LIST #}
@@ -90,7 +93,7 @@
                     <label for="variable-name" class="panel-title">Name of Favorite (Required)</label>
                 </div>
                 <div class="panel-body">
-                    <input type="text" id="variable_list_name_input" placeholder="my new favorite variable list" class="form-control" value="" required>
+                    <input type="text" id="variable_list_name_input" placeholder="My new favorite variable" class="form-control" value="" required>
                     <!--<div class="page-action-group">-->
                         <!--<button id="create_favorite_list" class="btn btn-primary">Save As Favorite</button>-->
                         <!--<a href="{% url 'variables' %}" class="btn btn-link">Cancel</a>-->
