fixing variable edit page

--- a/templates/variables/variable_detail.html
+++ b/templates/variables/variable_detail.html
@@ -31,7 +31,7 @@
             <ul>
                 {% for variable in variables.list  %}
                 <li class="delete-x filter-label label label-default">
-                    {{ variable.name }}: {{ variable.identifier }}
+                    {{ variable.name }}
                 </li>
                 {% endfor %}
             </ul>
