--- a/blink_sass/components/_listgroup.sass
+++ b/blink_sass/components/_listgroup.sass
@@ -85,6 +85,6 @@
     padding: 5px 15px
     background: lighten($isb-dark, 55%)
     margin-bottom: 1px
-    border-left: 3px solid $isb-warning
+    border-left: 3px solid $isb-info
     &:hover
       background: lighten($info-bgcolor, 3%)
