testing igv browser bq and gcs bam

--- a/templates/GenespotRE/igv.html
+++ b/templates/GenespotRE/igv.html
@@ -20,6 +20,8 @@
 {% endcomment %}
 
 {% block extra_css_libs %}
+    <script src="https://apis.google.com/js/client.js"></script>
+{#    <script src="https://apis.google.com/js/auth.js" gapi_processed="true"></script>#}
     <link type="text/css" rel="stylesheet" href="{% static 'css/igv-beta.css' %}" />
 {% endblock %}
 
