added partial implmentation of gene models

--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -125,7 +125,7 @@
                         {% endif %}
                     {% else %}
                     <p>You don't have any saved Gene Favorites.</p>
-                    <a href="{% url 'create_genes_list' %}">Create Gene Favorites</a>
+                    <a href="{% url 'gene_fav_create' %}">Create Gene Favorites</a>
                     {% endif %}
                 </div>
             </section>
