minor ui fixes, added initial state for genes_list page template

--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -220,7 +220,7 @@
                     {% endif %}
                     <li class="menu-item"><a href="{% url 'genes' %}">Manage Gene Favorite ( {{ user.genefavorite_last_view_set.all|active:'genefavorite'|length }} )</a></li>
                     <li class="menu-item"><a href="{% url 'gene_fav_create' %}">Create Gene Favorite(s)</a></li>
-                    <li class="menu-item"><a href="{% url 'genes' %}">Select Genes for a New Workbook</a></li>
+                    <li class="menu-item"><a href="{% url 'gene_select_and_create_workbook' %}">Select Genes for a New Workbook</a></li>
                 </ul>
             </li>
             <li class="menu-item has-drop-down">
