fixed the sample analysis error

--- a/templates/GenespotRE/sample_analyses.html
+++ b/templates/GenespotRE/sample_analyses.html
@@ -27,7 +27,7 @@
                     <p>Short Description</p>
                 </div>
                 <div class="panel-footer">
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
+                    <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-link">Start A New Workbook Bar Chart</button>
                     </form>
@@ -42,7 +42,7 @@
                     <p>Short Description</p>
                 </div>
                 <div class="panel-footer">
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
+                    <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-link">Start A New Workbook with Histogram</button>
                     </form>
@@ -57,7 +57,7 @@
                     <p>Short Description</p>
                 </div>
                 <div class="panel-footer">
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
+                    <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-link">Start A New Workbook with Scatter Plot</button>
                     </form>
@@ -72,7 +72,7 @@
                     <p>Short Description</p>
                 </div>
                 <div class="panel-footer">
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
+                    <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-link">Start A New Workbook with Violin Plot</button>
                     </form>
@@ -87,7 +87,7 @@
                     <p>Short Description</p>
                 </div>
                 <div class="panel-footer">
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
+                    <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-link">Start A New Workbook with Violin Plot 2</button>
                     </form>
@@ -102,7 +102,7 @@
                     <p>Short Description</p>
                 </div>
                 <div class="panel-footer">
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
+                    <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-link">Start A New Workbook with Cubby Hole</button>
                     </form>
@@ -117,7 +117,7 @@
                     <p>This visualization shows where somatic mutations have been observed on a linear representation of a specific protein.  Each horizontal strip represents the protein, with data from different tumor types (aka cohorts or studies) shown stacked one on top of the other. </p>
                 </div>
                 <div class="panel-footer">
-                    <form action="{% url 'worksheet_create_with_analysis' 0 %}" method="POST" class="center">
+                    <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-link">Start A New Workbook with SeqPeak</button>
                     </form>
