--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -213,7 +213,7 @@
                     {% endif %}
                 </div>
                 <div class="panel-footer">
-                    <button class="btn btn-primary"><i class="fa fa-cloud-upload"></i>Upload Project Data</button>
+                    <a href="{% url 'project_upload' %}" class="btn btn-primary"><i class="fa fa-cloud-upload"></i>Upload Project Data</a>
                 </div>
             </section>
             <section class="panel panel-default">
