fixed add worksheet button

--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -86,7 +86,7 @@
             {% endif %}
 
             <li>
-                <a data-target="#create-worksheet-modal" data-toggle="modal"><i class="fa fa-plus"></i></a>
+                <a data-target="#create-worksheet-modal-{{ workbook.id }}" data-toggle="modal"><i class="fa fa-plus"></i></a>
             </li>
         </ul>
         <div class="tab-content">
