--- a/templates/cohorts/cohort_list.html
+++ b/templates/cohorts/cohort_list.html
@@ -18,7 +18,7 @@
         <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
     </ol>
     <h1 class="page-header pull-left">Cohorts</h1>
-    <a href="{% url 'cohort' %}" class="btn btn-default pull-right"><i class="fa fa-plus"></i> Create New Cohort</a>
+    <a href="{% url 'cohort' %}" class="btn btn-primary pull-right"><i class="fa fa-plus"></i> Create New Cohort</a>
 </div>
 {% endblock %}
 {% block content %}
@@ -37,7 +37,7 @@
                 {% if cohorts.has_private_cohorts %}
                     <div class="page-action-group">
                         <li role="menuitem">
-                            <button id="createWorkbookWithCohort" class="btn btn-primary">New Workbook</button>
+                            <button id="createWorkbookWithCohort" class="btn btn-default">New Workbook</button>
                         <li class="separator"></li>
                         <li role="menuitem">
                             <button id='delete-cohorts' type="button" class="btn btn-info" data-toggle="modal" data-target="#delete-cohorts-modal" aria-label="delete-cohorts" role="button" aria-expanded="true">
