fixed plot setting fly out styles

--- a/blink_sass/_button.sass
+++ b/blink_sass/_button.sass
@@ -5,6 +5,8 @@
   i.fa
     padding-right: 5px
     position: relative
+  .fa.fa-rotate-90
+    padding-right: 0
   &.active
     .fa-cloud-upload
       display: none
