--- a/blink_sass/pages/manifest.sass
+++ b/blink_sass/pages/manifest.sass
@@ -1,8 +1,8 @@
-@import dashboard
-@import page
-@import workbook
-@import cohorts
-@import projects
-@import home
-@import users
-@import visualizations
+@import "dashboard"
+@import "page"
+@import "workbook"
+@import "cohorts"
+@import "projects"
+@import "home"
+@import "users"
+@import "visualizations"
