hooked up sample analysis page with start workbook with analysis link

--- a/templates/GenespotRE/sample_analyses.html
+++ b/templates/GenespotRE/sample_analyses.html
@@ -29,6 +29,7 @@
                 <div class="panel-footer">
                     <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
+                        <input type="hidden" name="analysis" value="barchart">
                         <button type="submit" class="btn btn-link">Start A New Workbook Bar Chart</button>
                     </form>
                 </div>
@@ -44,6 +45,7 @@
                 <div class="panel-footer">
                     <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
+                        <input type="hidden" name="analysis" value="histogram">
                         <button type="submit" class="btn btn-link">Start A New Workbook with Histogram</button>
                     </form>
                 </div>
@@ -59,6 +61,7 @@
                 <div class="panel-footer">
                     <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
+                        <input type="hidden" name="analysis" value="scatterplot">
                         <button type="submit" class="btn btn-link">Start A New Workbook with Scatter Plot</button>
                     </form>
                 </div>
@@ -74,6 +77,7 @@
                 <div class="panel-footer">
                     <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
+                        <input type="hidden" name="analysis" value="violinplot">
                         <button type="submit" class="btn btn-link">Start A New Workbook with Violin Plot</button>
                     </form>
                 </div>
@@ -89,6 +93,7 @@
                 <div class="panel-footer">
                     <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
+                        <input type="hidden" name="analysis" value="violinplot2">
                         <button type="submit" class="btn btn-link">Start A New Workbook with Violin Plot 2</button>
                     </form>
                 </div>
@@ -104,6 +109,7 @@
                 <div class="panel-footer">
                     <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
+                        <input type="hidden" name="analysis" value="cubbyhole">
                         <button type="submit" class="btn btn-link">Start A New Workbook with Cubby Hole</button>
                     </form>
                 </div>
@@ -119,6 +125,7 @@
                 <div class="panel-footer">
                     <form action="{% url 'worksheet_create_with_analysis' %}" method="POST" class="center">
                         {% csrf_token %}
+                        <input type="hidden" name="analysis" value="seqpeak">
                         <button type="submit" class="btn btn-link">Start A New Workbook with SeqPeak</button>
                     </form>
                 </div>
