--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -298,8 +298,8 @@
                         </ul>
                     </li>
                     {% endif %}
-                    <li class="menu-item"><a href="{% url 'cohort_list' %}">Manage Saved Cohorts ({{ user.cohort_perms_set.all|active:'cohort'|cohort_owner_permission|length }})</a></li>
-                    <li class="menu-item"><a href="{% url 'cohort_list' %}">Public Cohorts (1)</a></li>
+                    <li class="menu-item"><a href="{% url 'cohort_list' %}">Manage Saved Cohorts ( {{ user.cohort_perms_set.all|active:'cohort'|cohort_owner_permission|length }} )</a></li>
+                    <li class="menu-item"><a href="{% url 'cohort_list' %}">Public Cohorts ( {% public_cohort_count %} )</a></li>
                     <li class="menu-item"><a href="{% url 'cohort_select_for_new_workbook' %}">Select Cohort for a New Workbook</a></li>
                 </ul>
             </li>
