enabled site navigation toggle on help page

--- a/templates/GenespotRE/help.html
+++ b/templates/GenespotRE/help.html
@@ -50,4 +50,4 @@
     </div>
 {% endblock %}
 
-{#{% block js_file %}{% static 'js/help.js' %}{% endblock %}#}
+{% block js_file %}{% static 'js/dashboard.js' %}{% endblock %}
