--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% load custom_tags %}
+{% load cohort_filters %}
 {#{% load tz %}#}
 {% block header %}
 {% endblock %}
@@ -70,13 +71,14 @@
     </section>
     <section class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">Saved Workbooks ({{ user.workbook_set.all|active|length }})</h3>
+            <h3 class="panel-title">
+                <a href="{% url 'workbooks' %}">Saved Workbooks ({{ workbooks.count }})</a></h3>
         </div>
         <div class="panel-body">
             <p>Workbooks store the Analyses you create -- and their related data.</p>
             <ul class="table-list">
-            {% if user.workbook_set.all|active|length > 0 %}
-                {% for workbook in user.workbook_set.all|active|dictsortreversed:'last_date_saved'|slice:':6'  %}
+            {% if workbooks.count > 0 %}
+                {% for workbook in workbooks|sort_last_view:'workbook'|slice:':6'  %}
                     <li>
                         <a href="{% url 'workbook_detail' workbook.id %}">
                             <div class="list-main">
@@ -107,7 +109,8 @@
         <div class="col-md-6">
             <section class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Gene Favorites ({{ user.genefavorite_last_view_set.all|active:'genefavorite'|length }})</h3>
+                    <h3 class="panel-title">
+                        <a href="{% url 'genes' %}">Gene Favorites ({{ user.genefavorite_last_view_set.all|active:'genefavorite'|length }})</a></h3>
                 </div>
                 <div class="panel-body">
                     {% if user.genefavorite_last_view_set.all|active:'genefavorite'|length > 0 %}
@@ -131,7 +134,8 @@
             </section>
             <section class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Variable Favorites ({{ user.variablefavorite_last_view_set.all|active:'variablefavorite'|length }})</h3>
+                    <h3 class="panel-title">
+                        <a href="{% url 'variables' %}">Variable Favorites ({{ user.variablefavorite_last_view_set.all|active:'variablefavorite'|length }})</a></h3>
                 </div>
                 <div class="panel-body">
                     {% if user.variablefavorite_last_view_set.all|active:'variablefavorite'|length > 0 %}
@@ -158,25 +162,25 @@
             <section class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">
-                    <a href="{% url 'cohort_list' %}">Saved Cohorts ({{ user.cohort_last_view_set.all|active:'cohort'|length }})</a></h3>
+                    <a href="{% url 'cohort_list' %}">Saved Cohorts ({{ cohorts.count }})</a></h3>
                 </div>
                 <div class="panel-body">
-                    {% if user.cohort_last_view_set.all|active:'cohort'|length > 0 %}
+                    {% if cohorts.count > 0 %}
                     <ul class="table-list">
-                        {% for clv in user.cohort_last_view_set.all|active:'cohort'|dictsortreversed:'last_view'|slice:':6' %}
+                        {% for cohort in cohorts|sort_last_view:'cohort'|slice:':6' %}
                            <li>
-                               <a href="{% url 'cohort_details' clv.cohort.id %}">
+                               <a href="{% url 'cohort_details' cohort.id %}">
                                    <div class="list-main">
-                                       <span class="list-title">{{ clv.cohort.name }}</span>
+                                       <span class="list-title">{{ cohort.name }}</span>
                                    </div>
 
                                    <div class="list-info">
-                                       <span>{{ clv.cohort.last_date_saved }}</span>
+                                       <span>{{ cohort.last_date_saved }}</span>
                                    </div>
                                </a>
                            </li>
                         {% endfor %}
-                        {% if user.cohort_last_view_set.all|active:'cohort'|length > 6 %}
+                        {% if cohorts.count > 6 %}
                             <a class="btn btn-link" href="{% url 'cohort_list' %}">View all</a>
                         {% endif %}
                     </ul>
@@ -190,13 +194,14 @@
         <div class="col-md-6">
             <section class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Saved Projects ({{ user.project_set.all|active|length }})</h3>
+                    <h3 class="panel-title">
+                        <a href="{% url 'projects' %}">Saved Projects ({{ projects.count }})</a></h3>
                 </div>
                 <div class="panel-body">
                     <p>You can upload from your own research projects.</p>
-                    {% if user.project_set.all|active|length > 0 %}
+                    {% if projects.count > 0 %}
                     <ul class="table-list">
-                        {% for project in user.project_set.all|active|dictsortreversed:'last_date_saved'|slice:':6' %}
+                        {% for project in projects|sort_last_view:'project'|slice:':6' %}
                            <li>
                                <a href="{% url 'project_detail' project.id %}">
                                    <p class="list-title">{{ project.name }}</p>
